# NewsRefund

./: .gitignore  README.md  how to run.txt  main.py  pyproject.toml  requirements.txt
auth/: api_keys.py  gmail.py
newsrefund.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scanner/: ai_detector.py  detector.py  fetcher.py
ui/: app.py
unsubscriber/: agent.py  browser_agent.py  handler.py
