[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "newsrefund"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "google-auth>=2.29.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.126.0",
    "textual>=0.70.0",
    "httpx>=0.27.0",
]

[project.scripts]
newsrefund = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["auth*", "scanner*", "ui*", "unsubscriber*"]
